--- a/.github/workflows/sync-overlay-from-stegdb.yml
+++ b/.github/workflows/sync-overlay-from-stegdb.yml
@@ -13,6 +13,10 @@ on:
 permissions:
   contents: write
 
+concurrency:
+  group: overlay-sync-${{ github.repository }}
+  cancel-in-progress: true
+  
 jobs:
   sync:
     runs-on: ubuntu-latest
